--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title> mhw1</title>
+        <title>mhw3</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8"> 
         <!--Roboto Mono-->
@@ -34,8 +34,8 @@
 
         <nav id = "navbar">
             <a href="index.html">Home</a>
-            <a href="search.html">Search</a>
-            <a href="login.html">Login</a>
+            <a href="search.html">Cerca</a>
+            <a href="booking.html">Hotel</a>
         </nav>
 
         <header id = "header">
@@ -178,7 +178,7 @@
             <div id = "footer-box">
                 <div id = "footer-left">
                         <p>Nome: Matteo</p>
-                        <p>Cogome: Secondo</p>
+                        <p>Cognome: Secondo</p>
                         <p>Matricola: 1000017123</p>
                 </div>
             
