--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title> mhw1</title>
+    <title>Cerca</title>
     <link rel="stylesheet" href="style.css">
     <script src="search.js" defer="true"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8"> 
@@ -35,8 +35,8 @@
 
     <nav id = "navbar">
         <a href="index.html">Home</a>
-        <a href="search.html">Search</a>
-        <a href="login.html">Login</a>
+        <a href="search.html">Cerca</a>
+        <a href="booking.html">Hotel</a>
     </nav>
 
     <header id = "header">
@@ -56,7 +56,8 @@
     <form name ='search_content' id='search_content' class="form">
         <div class="wrap">
             <h1>Ricerca tra i nostri modelli</h1>
-            <p>Qui puoi effettuare una ricerca, scegliendo il parametro (solo uno) a cui si è interessati: </p>
+            <p>Qui puoi effettuare una ricerca, scegliendo il parametro (solo uno) a cui si è interessati. </p>
+            <p>Dopo aver selezionato il parametro, cliccare il pulsante per effettuare una nuova ricerca. </p>
 
             <div>
                 <label>Tipo</label>
@@ -86,14 +87,14 @@
         </div>
     </form>
         
-    <section id="results" class="form">
+    <section id="block" class="results">
     </section>
 
     <footer id="footer">
         <div id = "footer-box">
             <div id = "footer-left">
                     <p>Nome: Matteo</p>
-                    <p>Cogome: Secondo</p>
+                    <p>Cognome: Secondo</p>
                     <p>Matricola: 1000017123</p>
             </div>
         
